@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="cms-dialog js-cms-dialog js-cms-dialog-{{ dialog_id }}" data-callback="{{ callback }}">
+<div class="cms-dialog js-cms-dialog js-cms-dialog-{{ dialog_id }}">
     <h1>{% trans "Copy options" %}</h1>
     <p>{% trans "Choose copy options" %}</p>
     <form method="post">
